<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".Main2Activity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="45dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_form_rounded"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/first"
                android:drawableLeft="@mipmap/ic_launcher_user2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/FirstName"
                android:padding="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/second"
                android:drawableLeft="@mipmap/ic_launcher_user2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/LastName"
                android:padding="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/username"
                android:drawableLeft="@mipmap/ic_launcher_user"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/Enter_username"
                android:padding="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:drawableLeft="@mipmap/ic_launcher_lock"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_button_rounded"
            android:text="@string/Sign_up"
            android:textColor="@color/white"
            android:onClick="onclick1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onclick"
        android:text="@string/Login"
        android:textColor="@color/white" />

</RelativeLayout>